* Fix browser language autodetection (typo, thanks to Bert-Jan Kamp).
* Fix ticket expiration when using sqlite3 (table locking issues).
* Do not purge tickets prematurely after an unsuccessful download.
* Purge tickets immediately after the download, when possible.
* useradmin now allows to reset/change user role and password.
* All notifications are now sent using the default locale.


dl 0.7: 10/03/2010
------------------

* Fix XSS vulnerability for unknown ticket IDs (discovered by Sven Eric Neuz)


dl 0.6: 03/03/2010
------------------

* Remember the selected language with a cookie.
* Allow to tune the DB expiration process to improve the performance.
* Fixed E-Mail subject encoding.
* German translation update.
* PHP 5.3 warning fixes.


dl 0.5: 09/02/2010
------------------

* Fix upload progress-bar on Chrome and Safari.
* Minor bug, UI and usability fixes.
* Internationalization support.
* Italian and German translation.
* License changed to GNU GPL 2.


dl 0.4: 24/11/2009
------------------

* Ticket activity can be logged to syslog or a file.
* The minimal required PHP version is now 5.0.
* PDO is now used for the users/tickets database (defaulting to a sqlite
  database). Upgrading instructions in the README.
* The submission form now allows to automatically send a link of the ticket to
  the specified address/es.
* A ticket can now require a password to be downloaded.
* "Upload grants" can now be created, allowing others to send you a single file
  through DL.
* Progress-bar indicator during uploads.
* Required fields are highlighted when missing.


dl 0.3: 02/09/2009
------------------

* CSS-ification, with new skin from Kim Thostrup <kim@thostrup.dk>.
* Include IE5/6 PNG fix from Angus Turnbull http://www.twinhelix.com
* Multiuser support with HTTP authentication or internal user database.
* License changed to LGPL 3


dl 0.2: 10/10/2007
------------------

* Renamed "aux.php" to "funcs.php" to avoid "reserved file name" errors
  under Windows.