@@ -1,5 +1,5 @@
 <?php
 // download ticket system
-include("include/init.php");
+include("include/sess.php");
 include("include/ticketr.php");
 ?>
