@@ -12,6 +12,7 @@ if(!isset($authReal)) $authRealm = "Restricted Area";
 if(!isset($sessionName)) $sessionName = "DL" . md5($masterPath);
 if(!isset($dsn)) $dsn = "sqlite:$spoolDir/data.sdb";
 if(!isset($gcProbability)) $gcProbability = 1.0;
+if(!isset($gcInternal)) $gcInternal = true;
 if(!isset($gcLimit)) $gcLimit = 0;
 
 // derived data
